[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/repairments/repair_icon.png" type="Texture" id=1]
[ext_resource path="res://sprites/evac/evac_visualiser_to_point0.png" type="Texture" id=2]
[ext_resource path="res://sprites/evac/evac_visualiser_to_point1.png" type="Texture" id=3]
[ext_resource path="res://scripts/repair/repair_place.gd" type="Script" id=5]
[ext_resource path="res://sprites/repairments/wrench.png" type="Texture" id=6]
[ext_resource path="res://sprites/repairments/screw_driver.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17, 17 )

[sub_resource type="AnimatedTexture" id=1]
flags = 2
frames = 2
fps = 10.9
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 17 )

[sub_resource type="Animation" id=3]
resource_name = "def"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../spr2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[node name="repair_place" type="TouchScreenButton"]
shape = SubResource( 4 )
shape_centered = false
script = ExtResource( 5 )
speed = 60.0
mission_state = "start"

[node name="line_to_pointer" type="Line2D" parent="."]
show_behind_parent = true
points = PoolVector2Array( 0, 0, 0, 0 )
texture = SubResource( 1 )
texture_mode = 1

[node name="spr" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 1 )

[node name="repair_moving" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3
monitoring = false

[node name="coll" type="CollisionShape2D" parent="repair_moving"]
shape = SubResource( 2 )

[node name="spr2" type="Sprite" parent="repair_moving"]
rotation = 6.2149
texture = ExtResource( 6 )

[node name="spr" type="Sprite" parent="repair_moving"]
rotation = -6.2149
texture = ExtResource( 7 )

[node name="def" type="AnimationPlayer" parent="repair_moving/spr"]
autoplay = "def"
anims/def = SubResource( 3 )

[node name="wait_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="." to="." method="_on_repair_place_pressed"]
[connection signal="area_entered" from="repair_moving" to="." method="_on_repair_moving_area_entered"]
[connection signal="timeout" from="wait_timer" to="." method="_on_wait_timer_timeout"]
